# NetworkMonitor

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  conanfile.py
.cache/clangd/index/: main.cpp.810E940BE6F5CBAC.idx  main.cpp.813B0903C450DFED.idx  websocket-client.cpp.30F4CE9D3C6EF862.idx  websocket-client.cpp.4A6DD13EDD02175E.idx  websocket-client.h.9E3E5A0FAC1D96DA.idx  websocket-client.h.C5EF71F141FAEEA5.idx
inc/NetworkMonitor/: file-downloader.h  transport-network.h  websocket-client.h
src/: file-downloader.cpp  main.cpp  transport-network.cpp  websocket-client.cpp  websocket-client.h
tests/: file-downloader.cpp  main.cpp  transport-network.cpp  websocket-client.cpp
tests/test-data/: from_json_1line_1route.json  from_json_1line_2routes.json  from_json_2lines_2routes.json
